--- a/contactus.html
+++ b/contactus.html
@@ -21,8 +21,8 @@
                 <ul>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="aboutus.html">ABOUT US</a></li>
-                    <li><a href="contactus.php">CONTACT US</a></li>
-                    <li><a href="new.php">REGISTER</a></li>
+                    <li><a href="contactus.html">CONTACT US</a></li>
+                    <li><a href="index.html">REGISTER</a></li>
                     <li><a href="membership.html">MEMBERSHIP</a></li>
                 </ul>
             </div>
@@ -41,10 +41,10 @@
             <div class="contact-section">
                 <div class="contact-info">
                     <div><i class="fa-solid fa-location-dot"></i>
-                        <b>ADDRESS: Shrine Plaza, 1st Floor, Above Shree Ambika Restaurant, Tamtalav, Vasai 401201</b></div>
-                    <div><i class="fa-solid fa-envelope"></i><b>GMAIL: rockthegymvasaii@gmail.com</b></div>
-                    <div><i class="fa-solid fa-phone"></i><b>CONTACT: +91 9096801605</b></div>
-                    <div><i class="fa-solid fa-clock"></i><b>TIMING: Mon - Fri-8:00AM to 5:00PM </b></div>
+                        <b>ADDRESS: Shrine Plaza, 1st Floor, Above Shree Ambika Restaurant, Tamtalav, Vasai 144021</b></div>
+                    <div><i class="fa-solid fa-envelope"></i><b>GMAIL: rockthebestgym@gmail.com</b></div>
+                    <div><i class="fa-solid fa-phone"></i><b>CONTACT: +91 7814080390</b></div>
+                    <div><i class="fa-solid fa-clock"></i><b>TIMING: Mon 6:00AM to Fri-:900PM </b></div>
                 </div>
                 
 
