--- a/membership.html
+++ b/membership.html
@@ -18,7 +18,7 @@
                 <ul>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="aboutus.html">ABOUT US</a></li>
-                    <li><a href="contactus.php">CONTACT US</a></li>
+                    <li><a href="contactus.html">CONTACT US</a></li>
                     <li><a href="new.php">REGISTER</a></li>
                     <li><a href="membership.html">MEMBERSHIP</a></li>
                 </ul>
@@ -76,7 +76,7 @@
                     <div class="call">
                         <h1>JOIN US NOW BY VISITING US OR</h1>
                         <br/>
-                       <a href="tel:+91 9096801605" class="cnow">CALL NOW</a>
+                       <a href="tel:+91 7814080390" class="cnow">CALL NOW</a>
                     </div>      <br><br><br><br>
                     <div class="copyright">
                         <h1>© ROCK THE GYM | Designed by Abhishek</h1><br>
